@@ -2,82 +2,73 @@ package peruncs.datagrid.cluster.node.backup;
 
 import org.eclipse.store.storage.types.Storage;
 import org.eclipse.store.storage.types.StorageConnection;
-import peruncs.datagrid.cluster.node.exceptions.NodelibraryException;
+import peruncs.datagrid.cluster.node.exceptions.NodeLibraryException;
 import peruncs.datagrid.cluster.node.replication.ReplicationCursor;
 import peruncs.datagrid.cluster.node.replication.ReplicationCursorStore;
 import peruncs.datagrid.cluster.node.store.StorageFileOperations;
 import peruncs.datagrid.cluster.storage.types.AtomicFileStore;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.LinkOption;
-import java.nio.file.Path;
+import java.nio.file.*;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 import static org.eclipse.serializer.util.X.notNull;
 
-/// This backend stores backups as directories on a local filesystem volume.
+/// Stores compressed backup archives on a filesystem volume.
 ///
-/// A backup becomes visible only after its storage, metadata, manifest, and
-/// ready marker have been written. The backend keeps user-uploaded storage in
-/// a separate directory so it is not mistaken for a generated backup.
+/// The volume may be network-mounted. A backup is visible only after its
+/// complete archive has been atomically moved into the volume root.
 public interface FilesystemVolumeBackupBackend extends StorageBackupBackend {
-        /// Creates a filesystem backup backend.
+    /// Creates a filesystem backup backend.
     ///
     /// @param backupVolumePath backup volume path
     /// @return filesystem backup backend
-    static FilesystemVolumeBackupBackend New(
-            final Path backupVolumePath
-    ) {
-        return new Default(notNull(backupVolumePath));
+    static FilesystemVolumeBackupBackend New(final Path backupVolumePath) {
+        return new Default(notNull(backupVolumePath).toAbsolutePath().normalize());
     }
 
-        /// Implements the filesystem backup marker and copy protocol.
-    class Default implements FilesystemVolumeBackupBackend {
+    /// Implements archive export, restore, and cleanup.
+    final class Default implements FilesystemVolumeBackupBackend {
         private static final System.Logger LOGGER = System.getLogger(FilesystemVolumeBackupBackend.class.getName());
 
         private final Path backupVolumePath;
-        private final Path userUploadedStorageFolderPath;
+        private final Path userUploadedStorageArchivePath;
 
         private Default(final Path backupVolumePath) {
             this.backupVolumePath = backupVolumePath;
-            this.userUploadedStorageFolderPath = backupVolumePath.resolve(BackupFileNames.USER_UPLOADED_STORAGE);
+            this.userUploadedStorageArchivePath = backupVolumePath.resolve(BackupArchive.USER_UPLOADED_STORAGE_ARCHIVE);
         }
 
         @Override
-        public Optional<ReplicationCursor> getCursorFromPreviousBackup(final int skip) throws NodelibraryException {
+        public Optional<ReplicationCursor> getCursorFromPreviousBackup(final int skip) throws NodeLibraryException {
             LOGGER.log(System.Logger.Level.TRACE, "Getting backup metadata info of latest-%s".formatted(skip));
+            final var previousBackup = this.getLastBackup(skip).orElse(null);
+            if (previousBackup == null) return Optional.empty();
 
-            final var previousBackupMetadata = this.getLastBackup(skip).orElse(null);
-            if (previousBackupMetadata == null) {
-                return Optional.empty();
-            }
-
+            final Path archive = this.toArchivePath(previousBackup);
             try {
-                final Path manifest = this.toBackupFolderPath(previousBackupMetadata).resolve(BackupFileNames.MANIFEST);
-                return Optional.of(ReplicationCursorStore.decode(Files.readAllBytes(manifest)));
-            } catch (final IOException e) {
-                throw new NodelibraryException("Failed to read backup manifest", e);
+                return Optional.of(ReplicationCursorStore.decode(BackupArchive.readManifest(archive)));
+            } catch (final IOException failure) {
+                throw new NodeLibraryException("Failed to read backup manifest from %s".formatted(archive), failure);
             }
         }
 
         @Override
-        public List<BackupMetadata> listBackups() throws NodelibraryException {
-            return this.listBackupVolumeFiles()
-                    .stream()
-                    .filter(f -> !f.equals(BackupFileNames.USER_UPLOADED_STORAGE))
-                    .filter(this::isCompleteBackup)
-                    .map(this::parseMetadata)
+        public List<BackupMetadata> listBackups() throws NodeLibraryException {
+            return this.listBackupVolumeFiles().stream()
+                    .filter(BackupArchive::isBackupFileName)
+                    .filter(name -> Files.isRegularFile(this.backupVolumePath.resolve(name), LinkOption.NOFOLLOW_LINKS))
+                    .map(name -> BackupArchive.parseMetadata(name, this.backupVolumePath))
                     .sorted(Comparator.comparingLong(BackupMetadata::timestamp))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         @Override
-        public void deleteBackup(final BackupMetadata backup) throws NodelibraryException {
-            StorageFileOperations.deleteDirectory(this.toBackupFolderPath(backup));
+        public void deleteBackup(final BackupMetadata backup) throws NodeLibraryException {
+            this.deleteArchive(this.toArchivePath(backup));
         }
 
         @Override
@@ -85,172 +76,159 @@ public interface FilesystemVolumeBackupBackend extends StorageBackupBackend {
                 final StorageConnection connection,
                 final ReplicationCursor cursor,
                 final BackupMetadata backup
-        ) throws NodelibraryException {
-            final Path backupRootPath = this.toBackupFolderPath(backup);
-            final var fs = Storage.DefaultFileSystem();
-
-            connection.issueFullBackup(fs.ensureDirectory(backupRootPath.resolve(BackupFileNames.STORAGE)));
+        ) throws NodeLibraryException {
+            final Path exportDirectory = this.createTemporaryDirectory(".backup-export-");
+            Throwable primaryFailure = null;
             try {
-                StorageFileOperations.forceDirectory(backupRootPath.resolve(BackupFileNames.STORAGE));
-                final byte[] manifest = ReplicationCursorStore.encode(cursor);
-                AtomicFileStore.writeBytes(backupRootPath.resolve(BackupFileNames.MANIFEST), manifest);
-                /* The ready marker is the visibility commit.  It is written last
-                 * through the same forced replacement protocol so a crash cannot
-                 * publish a marker before the manifest and directory entry are
-                 * durable. */
-                AtomicFileStore.write(backupRootPath.resolve(BackupFileNames.READY), channel -> {
-                });
-            } catch (final IOException e) {
-                throw new NodelibraryException("Failed to publish backup replication manifest", e);
+                final var fs = Storage.DefaultFileSystem();
+                connection.issueFullBackup(fs.ensureDirectory(exportDirectory.resolve(StorageBackupBackend.STORAGE_ENTRY)));
+                try {
+                    Files.createDirectories(exportDirectory.resolve(StorageBackupBackend.STORAGE_ENTRY));
+                    StorageFileOperations.forceDirectory(exportDirectory.resolve(StorageBackupBackend.STORAGE_ENTRY));
+                    AtomicFileStore.writeBytes(
+                            exportDirectory.resolve(StorageBackupBackend.MANIFEST_ENTRY), ReplicationCursorStore.encode(cursor));
+                    AtomicFileStore.write(exportDirectory.resolve(StorageBackupBackend.READY_ENTRY), channel -> {
+                    });
+                } catch (final IOException failure) {
+                    throw new NodeLibraryException("Failed to write backup replication manifest", failure);
+                }
+
+                final Path temporaryArchive = exportDirectory.resolve(BackupArchive.toArchiveFileName(backup));
+                BackupArchive.compressStorage(exportDirectory, temporaryArchive);
+                this.publishArchive(temporaryArchive, this.toArchivePath(backup));
+            } catch (final RuntimeException | Error failure) {
+                primaryFailure = failure;
+                throw failure;
+            } finally {
+                try {
+                    StorageFileOperations.cleanup(exportDirectory, primaryFailure);
+                } catch (final NodeLibraryException cleanupFailure) {
+                    LOGGER.log(System.Logger.Level.WARNING,
+                            "Failed to clean up backup export workspace %s".formatted(exportDirectory), cleanupFailure);
+                }
             }
         }
 
         @Override
         public void downloadBackup(final Path storageDestinationParentPath, final BackupMetadata backup)
-                throws NodelibraryException {
-            final Path backupRootPath = this.toBackupFolderPath(backup);
-            this.restoreDirectory(backupRootPath.resolve(BackupFileNames.STORAGE), storageDestinationParentPath);
+                throws NodeLibraryException {
+            this.restoreArchive(this.toArchivePath(backup), storageDestinationParentPath, true);
         }
 
         @Override
-        public boolean hasUserUploadedStorage() throws NodelibraryException {
-            return this.listBackupVolumeFiles()
-                    .stream()
-                    .anyMatch(f -> f.equals(this.userUploadedStorageFolderPath.getFileName().toString()));
-        }
-
-        @Override
-        public void downloadUserUploadedStorage(final Path storageDestinationParentPath) throws NodelibraryException {
-            this.restoreDirectory(this.userUploadedStorageFolderPath, storageDestinationParentPath);
-        }
-
-        @Override
-        public void deleteUserUploadedStorage() throws NodelibraryException {
-            StorageFileOperations.deleteDirectory(this.userUploadedStorageFolderPath);
-        }
-
-        @Override
-        public void downloadLatestBackup(final Path targetRootPath) throws NodelibraryException {
+        public void downloadLatestBackup(final Path targetRootPath) throws NodeLibraryException {
             final var backup = this.latestBackup(false);
-            if (backup == null) {
-                throw new NodelibraryException("No backups are available to download");
-            }
+            if (backup == null) throw new NodeLibraryException("No backups are available to download");
             this.downloadBackup(targetRootPath, backup);
         }
 
-        private Path toBackupFolderPath(final BackupMetadata backup) {
-            return this.backupVolumePath.resolve(
-                    backup.timestamp() + (backup.manualSlot() ? ".manual" : "")
-            );
+        @Override
+        public boolean hasUserUploadedStorage() throws NodeLibraryException {
+            this.ensureVolumeDirectory();
+            return Files.isRegularFile(this.userUploadedStorageArchivePath, LinkOption.NOFOLLOW_LINKS);
         }
 
-        private BackupMetadata parseMetadata(final String folderName) throws NodelibraryException {
-            final String manualSuffix = ".manual";
-            final boolean isManual = folderName.endsWith(manualSuffix);
-            final long timestamp;
-            final String backupName = isManual ? folderName.substring(0, folderName.length() - manualSuffix.length())
-                    : folderName;
-            try {
-                timestamp = Long.parseLong(backupName);
-            } catch (final NumberFormatException e) {
-                throw new NodelibraryException(
-                        "Failed to parse backup timestamp for backup %s".formatted(this.backupVolumePath.resolve(folderName)), e
-                );
-            }
-            return new BackupMetadata(timestamp, isManual);
+        @Override
+        public void downloadUserUploadedStorage(final Path storageDestinationParentPath) throws NodeLibraryException {
+            this.restoreArchive(this.userUploadedStorageArchivePath, storageDestinationParentPath, false);
         }
 
-                /// A backup directory is visible only after the final ready marker has
-        /// been forced.  Requiring the storage directory and manifest as well
-        /// prevents an interrupted copy from being selected as the latest
-        /// recoverable backup.
-        private boolean isCompleteBackup(final String folderName) {
-            final Path root = this.backupVolumePath.resolve(folderName);
-            return Files.isDirectory(root, LinkOption.NOFOLLOW_LINKS)
-                   && Files.isDirectory(root.resolve(BackupFileNames.STORAGE), LinkOption.NOFOLLOW_LINKS)
-                   && Files.isRegularFile(root.resolve(BackupFileNames.MANIFEST), LinkOption.NOFOLLOW_LINKS)
-                   && Files.isRegularFile(root.resolve(BackupFileNames.READY), LinkOption.NOFOLLOW_LINKS);
+        @Override
+        public void deleteUserUploadedStorage() throws NodeLibraryException {
+            this.deleteArchive(this.userUploadedStorageArchivePath);
         }
 
-        private void copyDirectory(final Path sourceDir, final Path destinationDir) {
-            try {
-                StorageFileOperations.ensureNoSymbolicLinks(destinationDir);
-                if (!Files.isDirectory(sourceDir, LinkOption.NOFOLLOW_LINKS)) {
-                    throw new NodelibraryException("Backup source is not a directory: %s".formatted(sourceDir));
-                }
-                if (Files.exists(destinationDir, LinkOption.NOFOLLOW_LINKS)) {
-                    throw new NodelibraryException("Backup destination already contains storage: %s".formatted(destinationDir));
-                }
-                Files.createDirectories(destinationDir);
-                StorageFileOperations.ensureNoSymbolicLinks(destinationDir);
-            } catch (final IOException e) {
-                throw new NodelibraryException("Failed to create backup destination %s".formatted(destinationDir), e);
-            }
-            try (final var storageFiles = Files.walk(sourceDir)) {
-                storageFiles.forEach(f ->
-                {
-                    if (f.equals(sourceDir)) return;
-                    try {
-                        final var destinationFile = destinationDir.resolve(sourceDir.relativize(f));
-                        StorageFileOperations.ensureNoSymbolicLinks(destinationFile);
-                        if (Files.isSymbolicLink(f)) {
-                            throw new IOException("Backup source contains a symbolic link: %s".formatted(f));
-                        }
-                        if (Files.isDirectory(f, LinkOption.NOFOLLOW_LINKS)) {
-                            Files.createDirectories(destinationFile);
-                            StorageFileOperations.ensureNoSymbolicLinks(destinationFile);
-                        } else if (Files.isRegularFile(f, LinkOption.NOFOLLOW_LINKS)) {
-                            Files.createDirectories(destinationFile.getParent());
-                            StorageFileOperations.ensureNoSymbolicLinks(destinationFile.getParent());
-                            Files.copy(f, destinationFile, LinkOption.NOFOLLOW_LINKS);
-                        } else {
-                            throw new IOException("Unsupported backup entry: %s".formatted(f));
-                        }
-                    } catch (final IOException e) {
-                        throw new NodelibraryException("Failed to copy file", e);
-                    }
-                });
-            } catch (final IOException e) {
-                throw new NodelibraryException("Failed to walk files at %s".formatted(sourceDir), e);
-            }
-        }
-
-        private void restoreDirectory(final Path sourceDir, final Path destinationParent) {
-            try {
-                StorageFileOperations.ensureNoSymbolicLinks(destinationParent);
-                Files.createDirectories(destinationParent);
-                StorageFileOperations.ensureNoSymbolicLinks(destinationParent);
-            } catch (final IOException failure) {
-                throw new NodelibraryException("Failed to create backup destination %s".formatted(destinationParent), failure);
-            }
-            final Path temporary;
-            try {
-                temporary = Files.createTempDirectory(destinationParent, ".backup-restore-",
-                        StorageFileOperations.ownerOnlyDirectoryAttributes());
-            } catch (final IOException failure) {
-                throw new NodelibraryException("Failed to create temporary backup destination", failure);
-            }
+        private void restoreArchive(
+                final Path archive,
+                final Path storageDestinationParentPath,
+                final boolean requireBackupMetadata
+        ) throws NodeLibraryException {
+            this.createDestinationDirectory(storageDestinationParentPath);
+            final Path workingDirectory = this.createTemporaryDirectory(storageDestinationParentPath, ".backup-restore-");
             Throwable primaryFailure = null;
             try {
-                this.copyDirectory(sourceDir, temporary.resolve(BackupFileNames.STORAGE));
-                StorageFileOperations.installStorage(temporary.resolve(BackupFileNames.STORAGE),
-                        destinationParent.resolve(BackupFileNames.STORAGE));
+                BackupArchive.extractArchive(
+                        workingDirectory.resolve("extracted"), archive, requireBackupMetadata);
+                StorageFileOperations.installStorage(
+                        workingDirectory.resolve("extracted").resolve(StorageBackupBackend.STORAGE_ENTRY),
+                        storageDestinationParentPath.resolve(StorageBackupBackend.STORAGE_ENTRY));
             } catch (final RuntimeException | Error failure) {
                 primaryFailure = failure;
                 throw failure;
             } finally {
-                StorageFileOperations.cleanup(temporary, primaryFailure);
+                StorageFileOperations.cleanup(workingDirectory, primaryFailure);
             }
         }
 
-        private List<String> listBackupVolumeFiles() throws NodelibraryException {
-            if (Files.notExists(this.backupVolumePath, LinkOption.NOFOLLOW_LINKS)) {
-                return List.of();
+        private Path toArchivePath(final BackupMetadata backup) {
+            return this.backupVolumePath.resolve(BackupArchive.toArchiveFileName(backup));
+        }
+
+        private void publishArchive(final Path temporaryArchive, final Path destination) {
+            try {
+                StorageFileOperations.ensureNoSymbolicLinks(destination);
+                Files.move(temporaryArchive, destination, StandardCopyOption.ATOMIC_MOVE);
+                StorageFileOperations.forceDirectory(this.backupVolumePath);
+            } catch (final AtomicMoveNotSupportedException unsupported) {
+                throw new NodeLibraryException("Atomic backup publication is not supported", unsupported);
+            } catch (final IOException failure) {
+                throw new NodeLibraryException("Failed to publish backup archive %s".formatted(destination), failure);
             }
+        }
+
+        private void deleteArchive(final Path archive) throws NodeLibraryException {
+            try {
+                StorageFileOperations.ensureNoSymbolicLinks(archive);
+                if (Files.deleteIfExists(archive)) StorageFileOperations.forceDirectory(this.backupVolumePath);
+            } catch (final IOException failure) {
+                throw new NodeLibraryException("Failed to delete backup archive %s".formatted(archive), failure);
+            }
+        }
+
+        private void createDestinationDirectory(final Path destination) throws NodeLibraryException {
+            try {
+                StorageFileOperations.ensureNoSymbolicLinks(destination);
+                Files.createDirectories(destination);
+                StorageFileOperations.ensureNoSymbolicLinks(destination);
+            } catch (final IOException failure) {
+                throw new NodeLibraryException("Failed to create backup destination %s".formatted(destination), failure);
+            }
+        }
+
+        private Path createTemporaryDirectory(final String prefix) throws NodeLibraryException {
+            this.ensureVolumeDirectory();
+            return createTemporaryDirectory(this.backupVolumePath, prefix);
+        }
+
+        private Path createTemporaryDirectory(final Path parent, final String prefix) throws NodeLibraryException {
+            try {
+                StorageFileOperations.ensureNoSymbolicLinks(parent);
+                Files.createDirectories(parent);
+                final Path temporary = Files.createTempDirectory(
+                        parent, prefix + UUID.randomUUID() + "-", StorageFileOperations.ownerOnlyDirectoryAttributes());
+                StorageFileOperations.ensureNoSymbolicLinks(temporary);
+                return temporary;
+            } catch (final IOException failure) {
+                throw new NodeLibraryException("Failed to create backup workspace", failure);
+            }
+        }
+
+        private void ensureVolumeDirectory() throws NodeLibraryException {
+            try {
+                StorageFileOperations.ensureNoSymbolicLinks(this.backupVolumePath);
+                Files.createDirectories(this.backupVolumePath);
+                StorageFileOperations.ensureNoSymbolicLinks(this.backupVolumePath);
+            } catch (final IOException failure) {
+                throw new NodeLibraryException("Failed to prepare backup volume %s".formatted(this.backupVolumePath), failure);
+            }
+        }
+
+        private List<String> listBackupVolumeFiles() throws NodeLibraryException {
+            this.ensureVolumeDirectory();
             try (final var listStream = Files.list(this.backupVolumePath)) {
-                return listStream.map(p -> p.getFileName().toString()).sorted().collect(Collectors.toList());
-            } catch (final IOException e) {
-                throw new NodelibraryException("Failed to iterate backup files at %s".formatted(this.backupVolumePath), e);
+                return listStream.map(path -> path.getFileName().toString()).sorted().toList();
+            } catch (final IOException failure) {
+                throw new NodeLibraryException("Failed to iterate backup files at %s".formatted(this.backupVolumePath), failure);
             }
         }
     }
